// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

import "google/api/annotations.proto";

option java_multiple_files = true;
option java_package = "io.grpc.examples.hellorsk";
option java_outer_classname = "HelloRskProto";
option objc_class_prefix = "HLR";

package hellorsk;

// The greeting service definition.
service RSKGreeter {
    // Sends a greeting
    rpc SayHello (HelloRskRequest) returns (HelloRskReply) {
        option (google.api.http) = {
             post: "/v1/example/sayhello"
             body: "*"
        };
    }
}

// The request message containing the user's name.
message HelloRskRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloRskReply {
    string message = 1;
}
